--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/react": "16.7.20",
     "@types/react-dom": "16.0.11",
     "react": "16.7.0",
+    "react-div-100vh": "0.3.2",
     "react-dom": "16.7.0",
     "react-scripts": "2.1.3",
     "typescript": "3.2.4"
@@ -34,7 +35,7 @@
     "deploy": "gh-pages -d build",
     "test": "react-scripts test",
     "test:e2e": "cypress run",
-    "lint": "eslint src --ext tsx --ext ts --ignore-pattern serviceWorker.ts",
+    "lint": "eslint src --ext tsx --ext ts --ignore-pattern serviceWorker.ts --ignore-pattern module-declarations",
     "prettify": "prettier",
     "eject": "react-scripts eject"
   },
