--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@emotion/core": "10.0.6",
     "@emotion/styled": "10.0.6",
     "@types/jest": "24.0.6",
+    "@types/mockdate": "2.0.0",
     "@types/node": "11.9.5",
     "@types/react": "16.8.4",
     "@types/react-dom": "16.8.2",
@@ -27,6 +28,7 @@
     "husky": "1.3.1",
     "jest-dom": "3.1.2",
     "lint-staged": "8.1.4",
+    "mockdate": "2.0.2",
     "prettier": "1.16.0",
     "react-testing-library": "6.0.0"
   },
